--- a/source/index.html
+++ b/source/index.html
@@ -1,8 +1,12 @@
 {% extends "source/base.html" %}
 
 {% block slides %}
-{% include "source/title.html" %}
-{% include "source/test_markdown.html" %}
-{% include "source/test_code.html" %}
-{% include "source/test_backgrounds.html" %}
+{% include "source/000_title.html" %}
+{% include "source/100_background.html" %}
+{% include "source/200_summary.html" %}
+{% include "source/300_what_is.html" %}
+{% include "source/400_efficient.html" %}
+{% include "source/500_conf_bias.html" %}
+{% include "source/600_inferential_distance.html" %}
+{% include "source/700_questions.html" %}
 {% endblock %}
