--- a/presentation/index.html
+++ b/presentation/index.html
@@ -37,7 +37,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
                 
-<section data-background="#c6dbef" data-markdown>
+<section data-background="#d9d9d9" data-markdown>
     <script type="text/template">
         # Communication and Confirmation Bias
 
@@ -180,7 +180,7 @@
         </script>
     </section>
 </section>
-<section data-background="#d9d9d9">
+<section data-background="#c6dbef">
     <section data-markdown>
         <script type="text/template">
             # Efficient Communication
@@ -274,7 +274,7 @@
         </script>
     </section>
 </section>
-<section data-background="#b5cf6b" data-markdown>
+<section data-background="#cedb9c" data-markdown>
     <script type="text/template">
         # Questions?
 
