--- a/source/000_title.html
+++ b/source/000_title.html
@@ -1,4 +1,4 @@
-<section data-background="#c6dbef" data-markdown>
+<section data-background="#d9d9d9" data-markdown>
     <script type="text/template">
         # Communication and Confirmation Bias
 
