streamline content, switch background and summary

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -48,29 +48,32 @@
         [http://hyponymo.us/](http://hyponymo.us/)
     </script>
 </section>
+<section data-background="#a1d99b">
+    <section data-markdown>
+        <script type="text/template">
+            &ldquo;What do you mean, you don't eat no meat? ...That's okay, I make lamb.&rdquo;
+
+            &ndash; Aunt Voula, *My Big Fat Greek Wedding*
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            # In This Talk
+
+            * My background
+            * What is communication?
+            * Efficient communication
+            * A roadblock: confirmation bias
+            * Bonus: telepathy, or the structure of all human knowledge
+        </script>
+    </section>
+</section>
 <section data-background="#fdae6b">
     <section data-markdown>
         <script type="text/template">
             # Who am I?
 
             Mike &#8788; software engineer in San Francisco
-        </script>
-    </section>
-    <section data-markdown>
-        <script type="text/template">
-            ## Background
-
-            * Academic: math and CS
-            * Career: mostly games
-        </script>
-    </section>
-    <section data-markdown>
-        <script type="text/template">
-            **au&middot;to&middot;di&middot;dact**
-            
-            *noun*
-            
-            a self-taught person.
         </script>
     </section>
     <section data-markdown>
@@ -91,44 +94,6 @@
 
             * I'm not an expert
             * I'm just someone who thinks about things in a structured way
-        </script>
-    </section>
-    <section data-markdown>
-        <script type="text/template">
-            * I'm a serial obsessive
-                * Circus arts
-                * Go (the game, not the language)
-                * Candy making
-                * Speed cubing (best time is 45s, so I'm not that good)
-        </script>
-    </section>
-    <section data-markdown>
-        <script type="text/template">
-            A recurring obsession: **communication**
-        </script>
-    </section>
-</section>
-<section data-background="#a1d99b">
-    <section data-markdown>
-        <script type="text/template">
-            # In This Talk
-        </script>
-    </section>
-    <section data-markdown>
-        <script type="text/template">
-            &ldquo;What do you mean, you don't eat no meat? ...That's okay, I make lamb.&rdquo;
-
-            &ndash; Aunt Voula, *My Big Fat Greek Wedding*
-        </script>
-    </section>
-    <section data-markdown>
-        <script type="text/template">
-            # In This Talk
-
-            * What is communication?
-            * Efficient communication
-            * A roadblock: confirmation bias
-            * Bonus: telepathy, or the structure of all human knowledge
         </script>
     </section>
 </section>
@@ -160,8 +125,6 @@
     <section data-markdown>
         <script type="text/template">
             [diagram]
-
-            When I think of dogs (or flowers, or mathematics) the thing that happens in my brain is not the same as the thing that happens in your brain when you think of dogs (or flowers, or mathematics)
         </script>
     </section>
     <section data-markdown>
@@ -211,14 +174,7 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            The space of concepts is vast and multidimensional.
-
-            The most efficient way to pin down a concept is to ask questions that divide the space into regions of equal probability.
-        </script>
-    </section>
-    <section data-markdown>
-        <script type="text/template">
-            Fortunately English is more expressive than just a series of yeses and nos.
+            English is more expressive than just a series of *yes*es and *no*s.
 
             But concepts can still be quite difficult to communicate (and if I have time I'll talk about some reasons for this)
         </script>
@@ -243,13 +199,6 @@
     <section data-markdown>
         <script type="text/template">
             When you can't explain something (or can't understand something), enumerate and check your assumptions
-
-            You're probably wrong
-        </script>
-    </section>
-    <section data-markdown>
-        <script type="text/template">
-            But that's OK
         </script>
     </section>
 </section>
