--- a/source/100_summary.html
+++ b/source/100_summary.html
@@ -1,11 +1,6 @@
 <section data-background="#a1d99b">
     <section data-markdown>
         <script type="text/template">
-            # In This Talk
-        </script>
-    </section>
-    <section data-markdown>
-        <script type="text/template">
             &ldquo;What do you mean, you don't eat no meat? ...That's okay, I make lamb.&rdquo;
 
             &ndash; Aunt Voula, *My Big Fat Greek Wedding*
@@ -15,6 +10,7 @@
         <script type="text/template">
             # In This Talk
 
+            * My background
             * What is communication?
             * Efficient communication
             * A roadblock: confirmation bias
