--- a/source/400_efficient.html
+++ b/source/400_efficient.html
@@ -29,16 +29,9 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            The space of concepts is vast and multidimensional.
+            English is more expressive than just a series of *yes*es and *no*s.
 
-            The most efficient way to pin down a concept is to ask questions that divide the space into regions of equal probability.
-        </script>
-    </section>
-    <section data-markdown>
-        <script type="text/template">
-            Fortunately English is more expressive than just a series of yeses and nos.
-
-            But concepts can still be quite difficult to communicate (and if I have time I'll talk about some reasons for this)
+            But concepts can still be quite difficult to communicate
         </script>
     </section>
 </section>
