--- a/source/600_inferential_distance.html
+++ b/source/600_inferential_distance.html
@@ -15,7 +15,7 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            [...]
+            * Most knowledge depends heavily on other knowledge
         </script>
     </section>
 </section>
