add diagram, other tweaks

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -124,7 +124,10 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            [diagram]
+            ![Encoding communication](http://upload.wikimedia.org/wikipedia/commons/7/79/Encoding_communication.jpg)
+
+            ---
+            [CC BY 2.5](http://creativecommons.org/licenses/by/2.5/deed.en) [Yupi666](http://en.wikipedia.org/wiki/User:Yupi666) at [en.wikipedia](http://en.wikipedia.org/)
         </script>
     </section>
     <section data-markdown>
@@ -176,7 +179,7 @@
         <script type="text/template">
             English is more expressive than just a series of *yes*es and *no*s.
 
-            But concepts can still be quite difficult to communicate (and if I have time I'll talk about some reasons for this)
+            But concepts can still be quite difficult to communicate
         </script>
     </section>
 </section>
@@ -219,11 +222,12 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            [...]
+            * Most knowledge depends heavily on other knowledge
+            * But! Humans are good at working with partial knowledge
         </script>
     </section>
 </section>
-<section data-background="#cedb9c" data-markdown>
+<section data-background="#d9d9d9" data-markdown>
     <script type="text/template">
         # Questions?
 
