--- a/source/300_what_is.html
+++ b/source/300_what_is.html
@@ -25,7 +25,10 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            [diagram]
+            ![Encoding communication](http://upload.wikimedia.org/wikipedia/commons/7/79/Encoding_communication.jpg)
+
+            ---
+            [CC BY 2.5](http://creativecommons.org/licenses/by/2.5/deed.en) [Yupi666](http://en.wikipedia.org/wiki/User:Yupi666) at [en.wikipedia](http://en.wikipedia.org/)
         </script>
     </section>
     <section data-markdown>
