--- a/source/600_inferential_distance.html
+++ b/source/600_inferential_distance.html
@@ -16,6 +16,7 @@
     <section data-markdown>
         <script type="text/template">
             * Most knowledge depends heavily on other knowledge
+            * But! Humans are good at working with partial knowledge
         </script>
     </section>
 </section>
