--- a/source/700_questions.html
+++ b/source/700_questions.html
@@ -1,4 +1,4 @@
-<section data-background="#cedb9c" data-markdown>
+<section data-background="#d9d9d9" data-markdown>
     <script type="text/template">
         # Questions?
 
