adapt for lw meetup, first draft

--- a/source/200_background.html
+++ b/source/200_background.html
@@ -1,4 +1,4 @@
-<section data-background="#fdae6b">
+<section data-background="#d9d9d9">
     <section data-markdown>
         <script type="text/template">
             # Who am I?
@@ -11,11 +11,11 @@
             ## Background
 
             * Academic: math and CS
-            * Career: mostly games
+            * Career: mostly games, now at [Trifacta](http://www.trifacta.com/)
             * Self-study
-                * Heuristics and biases
-                * Game theory
-                * Bayesian statistics and causal graphs
+                * Bayesian statistics
+                * Education technology
+                * Psychology of games
         </script>
     </section>
     <section data-markdown>
