--- a/source/300_what_is.html
+++ b/source/300_what_is.html
@@ -1,4 +1,4 @@
-<section data-background="#bcbddc">
+<section data-background="#d9d9d9">
     <section data-markdown>
         <script type="text/template">
             # What is Communication?
@@ -43,7 +43,7 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            Communication is possible because (and to the extent that) we share handles to isomorphic thought patterns
+            Communication works because we share handles (e.g. words, phrases, icons)
         </script>
     </section>
 </section>
