--- a/source/500_conf_bias.html
+++ b/source/500_conf_bias.html
@@ -1,4 +1,4 @@
-<section data-background="#9edae5">
+<section data-background="#d9d9d9">
     <section data-markdown>
         <script type="text/template">
             # What Can Possibly Go Wrong?
