--- a/source/600_inferential_distance.html
+++ b/source/600_inferential_distance.html
@@ -1,4 +1,4 @@
-<section data-background="#e7ba52">
+<section data-background="#d9d9d9">
     <section data-markdown>
         <script type="text/template">
             (Bonus Section)
