--- a/source/100_summary.html
+++ b/source/100_summary.html
@@ -1,4 +1,4 @@
-<section data-background="#a1d99b">
+<section data-background="#d9d9d9">
     <section data-markdown>
         <script type="text/template">
             &ldquo;What do you mean, you don't eat no meat? ...That's okay, I make lamb.&rdquo;
