--- a/source/400_efficient.html
+++ b/source/400_efficient.html
@@ -1,4 +1,4 @@
-<section data-background="#c6dbef">
+<section data-background="#d9d9d9">
     <section data-markdown>
         <script type="text/template">
             # Efficient Communication
