--- a/presentation/index.html
+++ b/presentation/index.html
@@ -142,7 +142,7 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            Communication works because we share handles (e.g. words)
+            Communication works because we share handles (e.g. words, phrases, icons)
         </script>
     </section>
 </section>
